Fixes social icon wrapping on iPad.

--- a/scss/_main/_chrome.scss
+++ b/scss/_main/_chrome.scss
@@ -171,8 +171,7 @@
 
     li {
       display: inline-block;
-      padding: 6px 6px 6px 0;
-      margin-right: 12px;
+      margin-right: 16px;
     }
 
     .social-link {
